package modelo;

import transporte.Venta;
import transporte.Viaje;

public class Reporte {

    public String verReporteVentas(Venta[] venta) {
        String reporteVentas = "";
        return reporteVentas;

    }

    public String verReporteOcupacion(Viaje[] viaje) {
        String reporteOcupacion = "";
        return reporteOcupacion;
    }
}
